# sanitizer

./: .gitignore  BRANDING.md  LICENSE  README.md  pyproject.toml  sanitize.py  sanitize_gui.py  sanitizer_core.py
.github/workflows/: build-executables.yml
packaging/linux/: ConfigSanitizer.desktop
packaging/windows/: ConfigSanitizer.wxs
scripts/: build_executable.py  generate_logo_assets.py  package_linux_appimage.sh  package_macos.sh  package_windows_msi.ps1
tests/: test_sanitizer.py
